--- a/TableML/TableMLTests/TableMLTests.csproj
+++ b/TableML/TableMLTests/TableMLTests.csproj
@@ -1,9 +1,9 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{BEDF8009-E44E-4507-8511-00CBD910CFE2}</ProjectGuid>
+    <ProjectGuid>{164B3B58-390D-4913-8A34-4A1A069B526A}</ProjectGuid>
     <OutputType>Library</OutputType>
     <RootNamespace>TableMLTests</RootNamespace>
     <AssemblyName>TableMLTests</AssemblyName>
@@ -34,6 +34,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="TestExcel.xls">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="TestExcel.xlsx">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
@@ -44,13 +47,13 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\TableMLCompiler\TableMLCompiler.csproj">
+      <Project>{0ea0f262-7ef3-4696-a99c-f62e0bc2f613}</Project>
+      <Name>TableMLCompiler</Name>
+    </ProjectReference>
     <ProjectReference Include="..\TableML\TableML.csproj">
       <Project>{BA4B8898-DC04-4934-8858-D505226D1A28}</Project>
       <Name>TableML</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\TableMLCompiler\TableMLCompiler.csproj">
-      <Project>{0EA0F262-7EF3-4696-A99C-F62E0BC2F613}</Project>
-      <Name>TableMLCompiler</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
