--- a/TableML/TableMLCompilerConsole/TableMLCompilerConsole.csproj
+++ b/TableML/TableMLCompilerConsole/TableMLCompilerConsole.csproj
@@ -6,7 +6,7 @@
     <ProjectGuid>{D3A252A3-78B0-4651-AD16-C6B6A30F7326}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <RootNamespace>TableCompilerConsole</RootNamespace>
-    <AssemblyName>TableCompilerConsole</AssemblyName>
+    <AssemblyName>TableML</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
