--- a/TableML/TableMLCompiler/TableMLCompiler.csproj
+++ b/TableML/TableMLCompiler/TableMLCompiler.csproj
@@ -66,7 +66,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SimpleExcelFile.cs" />
     <Compile Include="BatchCompiler.cs" />
-    <Compile Include="Template.cs" />
+    <Compile Include="DefaultTemplate.cs" />
     <Compile Include="TableColumnVars.cs" />
   </ItemGroup>
   <ItemGroup>
