增加测试代码

--- a/TableML/TableMLCompilerConsole/TableMLCompilerConsole.csproj
+++ b/TableML/TableMLCompilerConsole/TableMLCompilerConsole.csproj
@@ -34,6 +34,7 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="LocalDebug.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
