Squashed commit of the following:
commit f3d51fb72828d2cf6389a55c34784713a24d2bd8
Author: qingqing-zhao <zhaoqignqing@gmail.com>
Date:   Tue May 9 11:39:20 2017 +0800

    注释行可以支持2行

commit f6d614915098b60f302150e2f14127fcb4d7e946
Author: qingqing-zhao <zhaoqignqing@gmail.com>
Date:   Tue May 9 10:46:55 2017 +0800

    add:在生成的class中显示excel文件名

commit b75dc3fde9c4b7629a56c58445c42d9abab2cc8d
Author: qingqing-zhao <zhaoqignqing@gmail.com>
Date:   Mon May 8 21:39:51 2017 +0800

    表的注释包含\n或\r\n

commit 187b01fccf6f2fb4a1e72e95bfe193c9d229f3c0
Author: qingqing-zhao <zhaoqignqing@gmail.com>
Date:   Wed May 3 14:23:50 2017 +0800

    fix bug:编译单个excel时生成的代码路径多个\

commit a342c2c8e51900d671cd91e1461243d519076df9
Author: qingqing-zhao <zhaoqignqing@gmail.com>
Date:   Sun Apr 30 19:00:50 2017 +0800

    默认的app.config

commit bd194aa0f7007e87901319cf6f9d558ff0b527a4
Author: qingqing-zhao <zhaoqignqing@gmail.com>
Date:   Sun Apr 30 18:57:03 2017 +0800

    编译后的路径可以使用绝对路径

commit c699bd9e03baecc8f9cb86fac4cef66ca31fce16
Author: qingqing-zhao <zhaoqignqing@gmail.com>
Date:   Sun Apr 30 17:06:19 2017 +0800

    add 编译单个excel生成代码

commit 08c988b9f5f4e8e180dd5628eb345e7fcdd52fa4
Author: qingqing-zhao <zhaoqignqing@gmail.com>
Date:   Fri Apr 28 14:07:38 2017 +0800

    TODO 编译单表时，生成代码

commit 39541c454b31de3f478ded7e1240e5ab7ef6d0ad
Author: qingqing-zhao <zhaoqignqing@gmail.com>
Date:   Mon Apr 24 15:28:28 2017 +0800

    fix:当列的内容为空时，tml生成错误的bug
    TableMLGUI 可读取配置;

commit 6358aef72d9ac2f4e2145a49dc4a63fe39e2f07d
Author: qingqing-zhao <zhaoqignqing@gmail.com>
Date:   Sun Apr 23 18:42:16 2017 +0800

    调试代码

commit 6031efa5ca3994df5e879da42cffe54458eb71ab
Author: qingqing-zhao <zhaoqignqing@gmail.com>
Date:   Sun Apr 23 18:40:33 2017 +0800

    add gui

commit f697eba8376cbf6ed2c912ba6f0d46cc7898ed0f
Author: qingqing-zhao <zhaoqignqing@gmail.com>
Date:   Sun Apr 23 18:32:50 2017 +0800

    Array.Copy

commit 5539be75466172e2c979f84c217a3e92f57a10ab
Author: qingqing-zhao <zhaoqig

--- a/TableML/TableMLGUI/TableMLGUI.csproj
+++ b/TableML/TableMLGUI/TableMLGUI.csproj
@@ -1,18 +1,19 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{0EA0F262-7EF3-4696-A99C-F62E0BC2F613}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <ProjectGuid>{55E28E01-2E74-4809-A2EE-A566FEA5D899}</ProjectGuid>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>TableMLCompiler</RootNamespace>
-    <AssemblyName>TableMLCompiler</AssemblyName>
+    <RootNamespace>TableMLGUI</RootNamespace>
+    <AssemblyName>TableMLGUI</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -22,12 +23,16 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+  </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="ICSharpCode.SharpZipLib, Version=0.86.0.518, Culture=neutral, PublicKeyToken=1b03e6acf1164f73, processorArchitecture=MSIL">
@@ -51,62 +56,69 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
-    <Reference Include="DotLiquid">
-      <HintPath>DotLiquid.dll</HintPath>
-    </Reference>
+    <Reference Include="System.configuration" />
+    <Reference Include="System.Core" />
+    <Reference Include="System.Xml.Linq" />
+    <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="System.Data" />
+    <Reference Include="System.Deployment" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
-  <Choose>
-    <When Condition="('$(VisualStudioVersion)' == '10.0' or '$(VisualStudioVersion)' == '') and '$(TargetFrameworkVersion)' == 'v3.5'">
-      <ItemGroup>
-        <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework, Version=10.1.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
-      </ItemGroup>
-    </When>
-    <Otherwise />
-  </Choose>
   <ItemGroup>
-    <Compile Include="BatchCompilerInSingleFile.cs" />
-    <Compile Include="CompilerConfig.cs" />
-    <Compile Include="ITableSourceFile.cs" />
-    <Compile Include="TableCompileResult.cs" />
-    <Compile Include="Compiler.cs" />
+    <Compile Include="ExcelHelper.cs" />
+    <Compile Include="FileHelper.cs" />
+    <Compile Include="MainForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MainForm.Designer.cs">
+      <DependentUpon>MainForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="OtherForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="OtherForm.Designer.cs">
+      <DependentUpon>OtherForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SimpleExcelFile.cs" />
-    <Compile Include="BatchCompiler.cs" />
-    <Compile Include="DefaultTemplate.cs" />
-    <Compile Include="TableColumnVars.cs" />
-    <Compile Include="TableTemplateVars.cs" />
+    <EmbeddedResource Include="MainForm.resx">
+      <DependentUpon>MainForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+    <None Include="App.config" />
+    <None Include="packages.config" />
+    <None Include="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
+    <Compile Include="Properties\Settings.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Settings.settings</DependentUpon>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\TableMLCompiler\TableMLCompiler.csproj">
+      <Project>{0ea0f262-7ef3-4696-a99c-f62e0bc2f613}</Project>
+      <Name>TableMLCompiler</Name>
+    </ProjectReference>
     <ProjectReference Include="..\TableML\TableML.csproj">
       <Project>{ba4b8898-dc04-4934-8858-d505226d1a28}</Project>
       <Name>TableML</Name>
-      <Private>False</Private>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
-  </ItemGroup>
-  <Choose>
-    <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
-      <ItemGroup>
-        <Reference Include="Microsoft.VisualStudio.QualityTools.CodedUITestFramework, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
-          <Private>False</Private>
-        </Reference>
-        <Reference Include="Microsoft.VisualStudio.TestTools.UITest.Common, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
-          <Private>False</Private>
-        </Reference>
-        <Reference Include="Microsoft.VisualStudio.TestTools.UITest.Extension, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
-          <Private>False</Private>
-        </Reference>
-        <Reference Include="Microsoft.VisualStudio.TestTools.UITesting, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
-          <Private>False</Private>
-        </Reference>
-      </ItemGroup>
-    </When>
-  </Choose>
-  <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
+  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
   </Target>
